Update Pagina del juego.html

--- a/Pagina del juego.html
+++ b/Pagina del juego.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebas Juego Js</title>
+    <title>Página de Juegos Js</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <script src="Juego de Programación.js"></script>
